resume and map updated

--- a/header.html
+++ b/header.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark "style="background-color: #093F4A;">
+<nav class="navbar navbar-expand-lg navbar-dark "style="background-color: #042e36;">
     
       <div class="container">
         <a class="navbar-brand" href="#">Md. Ali Akbar</a>
@@ -44,7 +44,8 @@
             </ul>
             <form class="d-flex">
                 <!-- <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"> -->
-                <button class="btn btn-outline-info text-light" type="submit">Download CV</button>
+                <!-- <button class="btn btn-outline-info text-light" type="submit">Download CV</button> -->
+                <button class="btn btn-outline-info text-light" ><a href="https://drive.google.com/file/d/198rT0Inp1hl4p9r0cpgP6187jnC1GVZ2/view?usp=sharing" target="_blank">Download CV</a></button>
             </form>
         </div>
  
