js skill color update

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     }
 
     .html5 { background-color: #e34c26; }
-    .javascript { background-color: #f7df1e; color: #000; }
+    .javascript { background-color: #baa929; }
     .python { background-color: #306998; }
     .php { background-color: #8993be; }
     .github { background-color: #333; }
