github page to github

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                         <div class="skill rest">REST</div>
                       </div>
                       <div class="col-auto">
-                        <div class="skill github">GitHub Pages</div>
+                        <div class="skill github">GitHub</div>
                       </div>
                       <div class="col-auto">
                         <div class="skill aws">AWS</div>
